@@ -101,10 +101,7 @@
     <properties>
         <linkis.version>1.1.0</linkis.version>
         <hadoop.version>2.7.2</hadoop.version>
-        <spring.eureka.version>2.2.1.RELEASE</spring.eureka.version>
-        <spring.feign.version>2.2.1.RELEASE</spring.feign.version>
         <spring.boot.version>2.3.2.RELEASE</spring.boot.version>
-        <spring.cloud.version>2.2.1.RELEASE</spring.cloud.version>
         <guava.version>30.0-jre</guava.version>
         <gson.version>2.8.5</gson.version>
         <fasterxml.jackson.version>2.11.3</fasterxml.jackson.version>
@@ -112,7 +109,7 @@
         <jdk.compile.version>1.8</jdk.compile.version>
         <plugin.scala.version>2.15.2</plugin.scala.version>
         <scala.binary.version>2.11</scala.binary.version>
-        <netty.version>4.1.60.Final</netty.version>
+        <netty.version>4.1.68.Final</netty.version>
         <json4s.version>3.5.3</json4s.version>
         <jersey.version>2.16</jersey.version>
         <jersey.servlet.version>2.23.1</jersey.servlet.version>
@@ -123,8 +120,6 @@
         <knife4j.version>2.0.9</knife4j.version>
         <maven.version>3.3.3</maven.version>
         <xstream.core.version>1.4.19</xstream.core.version>
-        <spring.version>5.2.15.RELEASE</spring.version>
-        <spring.security.cryto.version>5.4.4</spring.security.cryto.version>
         <reflections.version>0.9.10</reflections.version>
         <mybatis-plus.boot.starter.version>3.4.1</mybatis-plus.boot.starter.version>
         <mysql.connector.version>5.1.49</mysql.connector.version>
@@ -132,15 +127,23 @@
         <javassist.version>3.19.0-GA</javassist.version>
         <commons-collections.version>3.2.2</commons-collections.version>
         <commons-lang.version>2.6</commons-lang.version>
+        <commons-lang3.version>3.9</commons-lang3.version>
         <commons-io.version>2.11.0</commons-io.version>
         <druid.version>1.1.22</druid.version>
-        <protobuf.version>3.9.2</protobuf.version>
+        <protobuf.version>3.15.8</protobuf.version>
         <apache-rat-plugin.version>0.13</apache-rat-plugin.version>
         <assembly.package.rootpath>${basedir}</assembly.package.rootpath>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <log4j2.version>2.17.1</log4j2.version>
         <spotless.version>2.4.2</spotless.version>
+        <junit5.version>5.6.1</junit5.version>
+        <mockito.version>3.9.0</mockito.version>
+        <assertj.version>3.17.2</assertj.version>
+        <h2.version>1.4.200</h2.version>
+        <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
+        <jacoco.version>0.8.7</jacoco.version>
+        <jacoco.skip>false</jacoco.skip>
     </properties>
 
     <dependencyManagement>
@@ -231,10 +234,103 @@
                 <version>${mysql.connector.version}</version>
                 <scope>test</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit5.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-parent</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Hoxton.SR10</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
+   <dependencies>
+       <!-- Test -->
+       <dependency>
+           <groupId>org.junit.jupiter</groupId>
+           <artifactId>junit-jupiter</artifactId>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.junit.platform</groupId>
+           <artifactId>junit-platform-launcher</artifactId>
+           <scope>test</scope>
+       </dependency>
 
+       <dependency>
+           <groupId>org.mockito</groupId>
+           <artifactId>mockito-core</artifactId>
+           <version>${mockito.version}</version>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.mockito</groupId>
+           <artifactId>mockito-inline</artifactId>
+           <version>${mockito.version}</version>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.mockito</groupId>
+           <artifactId>mockito-junit-jupiter</artifactId>
+           <version>${mockito.version}</version>
+           <scope>test</scope>
+       </dependency>
+
+       <dependency>
+           <groupId>org.assertj</groupId>
+           <artifactId>assertj-core</artifactId>
+           <version>${assertj.version}</version>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-test</artifactId>
+           <exclusions>
+               <exclusion>
+                   <!-- The module is compatible with junit4 and junit 5, this example uses junit5 directly-->
+                   <groupId>org.junit.vintage</groupId>
+                   <artifactId>junit-vintage-engine</artifactId>
+               </exclusion>
+               <exclusion>
+                   <artifactId>spring-boot-starter-logging</artifactId>
+                   <groupId>org.springframework.boot</groupId>
+               </exclusion>
+           </exclusions>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>com.h2database</groupId>
+           <artifactId>h2</artifactId>
+           <version>${h2.version}</version>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-data-jpa</artifactId>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.springframework</groupId>
+           <artifactId>spring-test</artifactId>
+           <scope>test</scope>
+       </dependency>
+   </dependencies>
 
     <profiles>
         <!-- jacoco: mvn validate -Pjacoco  -->
@@ -544,6 +640,17 @@
                         </execution>
                     </executions>
                 </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <forkCount>3</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    </configuration>
+                </plugin>
+
             </plugins>
         </pluginManagement>
     </build>
